# EdgeGesture

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  arm64deploy.bat
build_vs/: CMakeCache.txt
src_engine/: main.cpp
src_engine/actions/: ActionDispatcher.cpp  ActionDispatcher.h
src_engine/core/: ConfigManager.cpp  ConfigManager.h  EngineCore.cpp  EngineCore.h
src_engine/input/: InputHook.cpp  InputHook.h  InputWindow.cpp  InputWindow.h
src_engine/ui/: Visualizer.cpp  Visualizer.h
src_plugin/: CMakeLists.txt
src_plugin/notes/: .qmlls.ini  CMakeLists.txt  CodeHighlighter.cpp  CodeHighlighter.h  MarkdownFormatter.cpp  MarkdownFormatter.h  MarkdownParser.cpp  MarkdownParser.h  MathHelper.cpp  MathHelper.h  MathImageProvider.cpp  MathImageProvider.h  MathItem.cpp  MathItem.h  MathRender.cpp  MathRender.h  MathRenderItem.cpp  MathRenderItem.h  NoteBlock.h  NoteBlockModel.cpp  NoteBlockModel.h  NotesFileHandler.cpp  NotesFileHandler.h  NotesIndex.cpp  NotesIndex.h  NotesModel.cpp  NotesModel.h
src_ui/: Main.qml  main.cpp  resources.qrc
src_ui/pages/: ActionsPage.qml  AdvancedPage.qml  GestureSettingsPage.qml  HandleSettingsPage.qml  HomePage.qml  PluginSettingsPage.qml
src_ui/plugin/: Launchpad.qml  PluginContainer.qml  Weather.qml
src_ui/plugin/components/: Launchpad.qml  Notes.qml  QuickPanel.qml
src_ui/plugin/components/notes/: NotesEditor.qml  NotesFormatBtn.qml  NotesHome.qml
src_ui/plugin/components/notes/blocks/: BlockDelegate.qml  CalloutBlock.qml  CodeBlock.qml  DividerBlock.qml  EmbedBlock.qml  FluentEditorArea.qml  HeadingBlock.qml  ImageBlock.qml  ListBlock.qml  ParagraphBlock.qml  QuoteBlock.qml  ReferenceBlock.qml  TableBlock.qml  TaskListBlock.qml
src_ui/utils/: ExeIconProvider.cpp  ExeIconProvider.h  FileBridge.cpp  FileBridge.h  SystemBridge.cpp  SystemBridge.h
src_ui/utils/config/bridge/: ConfigBridge.cpp  ConfigBridge.h  SystemBridge.cpp  SystemBridge.h
src_ui/utils/config/models/: HandleSettings.cpp  HandleSettings.h  PhysicsSettings.cpp  PhysicsSettings.h
src_ui/utils/config/services/: ActionRegistry.cpp  ActionRegistry.h  Plugin.cpp  Plugin.h  ProfileManager.cpp  ProfileManager.h  SettingsManager.cpp  SettingsManager.h
src_ui/utils/config/system/: EngineControl.cpp  EngineControl.h  SystemEventListener.cpp  SystemEventListener.h  WindowsUtils.cpp  WindowsUtils.h
